# MangaRepacker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  output.json  pyproject.toml
docs/: index.md
packaging/deb/DEBIAN/: control
packaging/flatpak/: mangarepacker.desktop  mangarepacker.json
packaging/windows/: installer.iss
scripts/: setup-dev.sh  setup-flatpak.sh
src/app/: main.py  mangarepacker.py
src/app/modules/: mangarepacker.py  mangarepacker_io.py  mangarepacker_single_stats.py  mangarepacker_stats.py
tests/: results.json
